--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "faker": "^6.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-js-pagination": "^3.0.3",
-    "react-paginate": "^8.1.2",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-tabs": "^4.0.1",
@@ -24,7 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-"deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
