--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-tabs": "^4.0.1",
+    "reactjs-server-side-table": "^0.1.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
